Support branching for submissions
